--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-react",
+  "name": "practice-react-with-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
